14005 eventfd_read/write() don't return failure Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Dan McDonald <danmcd@joyent.com> (Early pull-in for 20210812)